<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="@color/soft_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/english_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:checked="true"
            android:text="@string/swith_language"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_firstnumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toStartOf="@id/til_secondnumber"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/english_switch">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_firstnumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_number"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_secondnumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/til_firstnumber"
            app:layout_constraintTop_toTopOf="@id/til_firstnumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_secondnumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_number"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/radio_button_plus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_firstnumber">

            <RadioButton
                android:id="@+id/radio_button_plus"
                style="@style/RadioButton"
                android:text="@string/plus_symbol" />

            <RadioButton
                android:id="@+id/radio_button_minus"
                style="@style/RadioButton"
                android:text="@string/minus_symbol" />

            <RadioButton
                android:id="@+id/radio_button_multiply"
                style="@style/RadioButton"
                android:text="@string/mutiply_simbol" />

            <RadioButton
                android:id="@+id/radio_button_division"
                style="@style/RadioButton"
                android:text="@string/division_symbol" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_calculate"
            style="@style/Button"
            android:layout_marginTop="8dp"
            android:text="@string/calculate"
            app:layout_constraintStart_toStartOf="@id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/result"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/btn_calculate"
            app:layout_constraintTop_toBottomOf="@id/btn_calculate" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:src="@drawable/img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_result"
            app:layout_constraintTop_toBottomOf="@id/tv_result" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>